adds some extra structures

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,1 +1,12 @@
-@import 'bulma'
+@import 'bulma';
+
+body {
+  &>div#__next {
+    &>div {
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+  }
+}
+
